Changed spacing issues

--- a/frontend/src/assets/css/carousel.module.css
+++ b/frontend/src/assets/css/carousel.module.css
@@ -15,7 +15,7 @@
 
 .progressButton {
     z-index: 10;
-    font-size: 12px;
+    font-size: 16px;
     line-height: 20px;
     flex: none;
     padding: 0;
@@ -23,8 +23,8 @@
     background-color: white;
     box-shadow: 0px 0px 5px #888888;
     border-radius: 50%;
-    width: 3vh;
-    height: 3vh;
+    width: 4vh;
+    height: 4vh;
     overflow: none;
     transition: 0.2s;
 }
